fix padding for Read Post on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -529,7 +529,7 @@ h3 a {
     border-radius: 6px;
     margin-top: 20px;
   }
-  .read_more {
+  .view_post {
     padding-bottom: 18px;
   }
 }
